# junk

./: README.md
cmake_template/: CMakeLists.txt  CTestConfig.cmake  Installation.cmake  NSIS.template.in  compiler_settings.cmake  profiling_settings.cmake  readme.txt  test_helpers.cmake  test_settings.cmake  test_suite_initialization_example.cpp  third_parties.cmake
cmake_template/version/: CMakeLists.txt  readme.txt  update_build_version.cmake  update_version.cmake  version.cpp  version.h  version_helpers.cmake  version_number.h
flex_bison_templates/cpp_parser_template/: CMakeLists.txt  calc.cpp  calc.lex  calc.y  calc_driver.cpp  calc_driver.hpp  calc_lexer.cpp  calc_lexer.hpp  calc_parser.cpp  calc_parser.hpp  location.hh  position.hh  stack.hh
flex_bison_templates/parser_template/: CMakeLists.txt  calc.lex  calc.y  calc_lexer.cpp  calc_lexer.hpp  calc_parser.cpp  calc_parser.hpp  main.cpp
gperf_template/: CMakeLists.txt  months.cpp  months.gperf
groovy_stuff/: add_class_files.groovy  convert_boost_test_cases_names.groovy  count_lines.groovy  count_lines_short.groovy  count_svn_size.groovy  cpp_count_lines.groovy  create_test_suit.groovy  external_process.groovy  measure_time.groovy  rename_h_to_hpp.groovy  run_all_tests.groovy
pin/: CMakeLists.txt  pin_helpers.cmake
